# RustSensei

./: .gitignore  .guardy.yaml  LICENSE  NOTICE  PRIVACY_POLICY.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/book/: index.json
app/src/main/assets/book/chapters/: ch01-getting-started.json  ch02-guessing-game.json  ch03-common-concepts.json  ch04-ownership.json  ch05-structs.json  ch06-enums.json  ch07-packages-crates-modules.json  ch08-common-collections.json  ch09-error-handling.json  ch10-generics-traits-lifetimes.json  ch11-writing-tests.json  ch12-io-project.json  ch13-functional-features.json  ch14-cargo-crates-io.json  ch15-smart-pointers.json  ch16-concurrency.json  ch17-oop.json  ch18-patterns.json  ch19-advanced-features.json  ch20-web-server.json  ch21-appendix.json
app/src/main/assets/docs/: arc.json  box.json  btreemap.json  bufreader.json  cell.json  channel.json  cow.json  file.json  future.json  hashmap.json  hashset.json  index.json  iterator.json  mutex.json  option.json  path.json  pin.json  process.json  rc.json  refcell.json  result.json  str.json  string.json  thread.json  vec.json  vecdeque.json
app/src/main/assets/exercises/: index.json
app/src/main/assets/exercises/exercises/: algorithm1.json  arc1.json  as_ref_mut.json  box1.json  clippy1.json  clippy2.json  clippy3.json  cow1.json  enums1.json  enums2.json  enums3.json  errors1.json  errors2.json  errors3.json  errors4.json  errors5.json  errors6.json  from_into.json  from_str.json  functions1.json  functions2.json  functions3.json  functions4.json  functions5.json  generics1.json  generics2.json  (+71 more)
app/src/main/assets/paths/: index.json
app/src/main/assets/projects/: index.json  json-parser.json  todo-cli.json  word-counter.json
app/src/main/assets/quizzes/: index.json  quiz-algorithms.json  quiz-ch01.json  quiz-ch02.json  quiz-ch03.json  quiz-ch04.json  quiz-ch05.json  quiz-ch06.json  quiz-ch07.json  quiz-ch08.json  quiz-ch09.json  quiz-ch10.json  quiz-ch11.json  quiz-ch12.json  quiz-ch13.json  quiz-ch14.json  quiz-ch15.json  quiz-ch16.json  quiz-ch17.json  quiz-ch18.json  quiz-ch19.json  quiz-ch20.json  quiz-ch21.json  quiz-clippy.json  quiz-collections.json  quiz-conversions.json  quiz-enums.json  quiz-error-handling.json  quiz-functions.json  quiz-generics.json  quiz-hashmaps.json  quiz-if.json  quiz-intro.json  quiz-iterators.json  quiz-lifetimes.json  quiz-macros.json  quiz-modules.json  quiz-move-semantics.json  quiz-options.json  quiz-ownership.json  (+11 more)
app/src/main/assets/rag/: chunks.json  keywords.json
app/src/main/assets/refactoring/: index.json  refactor1.json  refactor2.json  refactor3.json  refactor4.json  refactor5.json
app/src/main/assets/reference/: index.json
app/src/main/assets/visualizations/: borrow-immutable.json  borrow-mutable.json  clone-vs-move.json  drop-order.json  index.json  move-basic.json  rc-shared.json
app/src/main/cpp/: CMakeLists.txt  llama-android.cpp
app/src/main/res/drawable/: ic_github.xml  ic_huggingface.xml  ic_instagram.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_linkedin.xml  ic_medium.xml  ic_substack.xml
app/src/main/res/layout/: widget_loading.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml  widget_info.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+300 files in other folders)
